--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
 		"body-parser": "^1.15.2",
 		"chai": "^3.5.0",
+		"chai-http": "^4.2.1",
+		"cors": "^2.8.1",
+		"express": "^4.14.0",
+		"helmet": "^3.1.0",
+		"mocha": "^5.2.0",
 		"mongodb": "^2.2.16",
-		"chai-http": "^3.0.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5",
-		"helmet": "^3.1.0"
+		"zombie": "^6.1.4"
 	},
 	"engines": {
-		"node": "4.4.3"
+		"node": "10.15.0"
 	},
 	"repository": {
 		"type": "git",
@@ -32,5 +33,8 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^1.18.9"
+	}
 }
