--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
@@ -22,7 +21,7 @@
 		"zombie": "^6.1.4"
 	},
 	"engines": {
-		"node": "10.15.0"
+		"node": "4.4.3"
 	},
 	"repository": {
 		"type": "git",
@@ -33,8 +32,5 @@
 		"hyperdev",
 		"express"
 	],
-	"license": "MIT",
-	"devDependencies": {
-		"nodemon": "^1.18.9"
-	}
+	"license": "MIT"
 }
