--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"dev": "nodemon server.js",
+		"test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha -u tdd tests/**/*.js",
+		"test:watch": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha -u tdd --watch tests/**/*.js"
+
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
